# KaanO-CuCLARK

./: .dockerignore  CMakeLists.txt  CUCLARK.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  install.sh
mwe/: README.md  run_mwe.sh  test_example_fasta.sh
scripts/: classify_metagenome.sh  cuclark  install.sh  make_metadata.sh  set_targets.sh  setup_custom_db.sh
src/: CuCLARK_hh.hh  CuClarkDB.cu  HashTableStorage_hh.hh  dataType.hh  file.hh  getAccssnTaxID.cc  getfilesToTaxNodes.cc  hashTable_hh.hh  kmersConversion.hh  main.cc  parameters.hh
